# Wiki-Editing-Scripts

./: .gitignore  README.md  pyproject.toml
WikiEditingScripts by SummerFleur/: .gitignore  README.md  pyproject.toml
WikiEditingScripts by SummerFleur/json_sve/: FruitTrees.json  Objects.json  zh.json
WikiEditingScripts by SummerFleur/src/: Infobox_craft_generator.py  ItemService.py  ShopService.py
WikiEditingScripts by SummerFleur/src/Infobox_generator/: Infobox_craft_generator.py  Infobox_fish_generator.py  Infobox_seed_generator.py  Infobox_vf_generator.py  Infobox_vfff_generator.py
WikiEditingScripts by SummerFleur/src/MediaWikiBot/: StardewValleyWiki.py  artisans.json
WikiEditingScripts by SummerFleur/src/Picture_processor/: Picture_processor.py
json/: CraftingRecipes.json  Weapons.json  itemID.json
json_sve/: BigCraftables.json  Crops.json  Objects.json  Shops.json
src/: ItemService.py  RecipeService.py  ShopService.py  Utilities.py
src/Infobox_generator/: Infobox_craft_generator.py  Infobox_fish_generator.py  Infobox_seed_generator.py  Infobox_vfff_generator.py  Infobox_weapon_generator.py  Recipes_helper.py
src/Parsers/: Shop_parser.py
